package ua.hillel.lessons.lesson26.grasp.demos._4_low_coupling.good;

// Интерфейс, позволяющий реализовать слабую связь.
interface Vehicle {
    void move();
}
